refactor using headers and detached cpp's

--- a/Practice3_KPO/Practice3_KPO.vcxproj
+++ b/Practice3_KPO/Practice3_KPO.vcxproj
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DynArray.cpp" />
+    <ClCompile Include="MyStack.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DynArray.hpp" />
+    <ClInclude Include="MyStack.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
