replaced tests to detach file

--- a/Practice3_KPO/Practice3_KPO.vcxproj.filters
+++ b/Practice3_KPO/Practice3_KPO.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="MyStack.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Tests.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynArray.hpp">
