--- a/Practice3_KPO/Practice3_KPO.vcxproj
+++ b/Practice3_KPO/Practice3_KPO.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="DynArray.cpp" />
     <ClCompile Include="MyStack.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynArray.hpp" />
